--- a/evernote-sdk-android-master/demo/src/main/res/values/dimens.xml
+++ b/evernote-sdk-android-master/demo/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="status_bar_padding">0dp</dimen>
 
     <dimen name="fab_margin">24dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
