--- a/evernote-sdk-android-master/demo/src/main/res/menu/activity_main.xml
+++ b/evernote-sdk-android-master/demo/src/main/res/menu/activity_main.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item
+        android:id="@+id/action_sortbytitle"
+        android:title="@string/sort_by_title"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_sortbydate"
+        android:title="@string/sort_by_date"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_logout"
         android:title="@string/label_logout"
